# quad-tree-split-view

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  install.bat  main.cpp  mini-portal.sln  mini-portal.vcxproj  mini-portal.vcxproj.filters  pyproject.toml  sample.ixx  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: build.yml
include/: stb_image.h
include/GLFW/: glfw3.h  glfw3native.h
include/glad/: glad.h
include/glm/: common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
include/glm/detail/: _noise.hpp  _swizzle.hpp  _vectorize.hpp  func_integer.inl  setup.hpp  type_float.hpp  type_half.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_quat.hpp  (+5 more)
src/: axes.cpp  axes.h  axes.ixx  camera.cpp  camera.h  camera.ixx  ceiling.cpp  ceiling.h  floor.cpp  floor.h  floor.ixx  fps_counter.cpp  fps_counter.h  glad.c  global_timer.cpp  global_timer.h  grid.cpp  grid.h  grid.ixx  light_source.cpp  light_source.h  light_source.ixx  main.cpp  quad-tree.ixx  quad_tree.cpp  quad_tree.h  raii_glfw.cpp  raii_glfw.h  raii_glfw.ixx  scene.cpp  scene.h  scene.ixx  shader.cpp  shader.h  shader.ixx  sphere.cpp  sphere.h  sphere.ixx  template_test.cpp  texture.cpp  (+8 more)
src/shaders/: basic.frag  light_source.frag  light_source.vert  lighting.frag  lighting.vert  sphere_lighting.frag  sphere_lighting.vert  texture.vert  texture_lighting.vert
(+90 files in other folders)
